fixed spacing issue in jumbotron and fixed home button colors

--- a/public/style.css
+++ b/public/style.css
@@ -45,6 +45,8 @@ body {
     background-color:#002400; 
     background-image: url('https://images.unsplash.com/photo-1583571560096-eb4462cdba30?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80');
     background-repeat: no-repeat;
+    
+    height: 100%;
    
 }
 
@@ -59,7 +61,7 @@ body {
     border-width: 10px;
 }
 a:-webkit-any-link {
-    color: #002400;
+    color: #e8e9eb;
     cursor: pointer;
 }
 
@@ -70,5 +72,23 @@ a:-webkit-any-link {
 .btn {
     background-color: #df7748;
     border-color: transparent;
-    padding-top: 20px;
+    margin-top: 5px;
+}
+
+.btn-default {
+    color: #dadedc;
+    background-color: #df7748;
+    border-color: #ccc;
+}
+
+h1 {
+    margin-top: 10px;
+}
+
+h2{
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+.form-control {
+    background-color:#dadedc;
 }
